	- Fix for parent-child disagreement code which could have trouble
	  when (a) ipv6 was disabled and (b) the TTL for parent and child
	  were different.  There were two bugs, the parent-side information
	  is fixed to no longer block lookup of child side information and
	  the iterator is fixed to no longer attempt to get ipv6 when it is
	  not enabled and then give up in failure.

7 January 2010: Wouter
	- Fixup python documentation (thanks Leo Vandewoestijne).
	- Work on cache prefetch feature.
	- Stats for prefetch, in log print stats, unbound-control stats
	  and in unbound_munin plugin.

6 January 2010: Wouter
	- iana portlist updated.
	- bug#291: DNS wireformat max is 255. dname_valid allowed 256 length.
	- verbose output includes parent-side-address notion for lameness.
	- documented val-log-level: 2 setting in example.conf and man page.
	- change unbound-control-setup from 1024(sha1) to 1536(sha256).

1 January 2010: Wouter
	- iana portlist updated.

22 December 2009: Wouter
	- configure with newer libtool 2.2.6b.

17 December 2009: Wouter
	- review comments.
	- tag 1.4.1.
	- trunk to version 1.4.2.
	
15 December 2009: Wouter
	- Answer to qclass=ANY queries, with class IN contents.
	  Test that validation also works.
	- updated ldns snapshot tarball with latest fixes (parsing records).

11 December 2009: Wouter
	- on IPv4 UDP turn off DF flag.

10 December 2009: Wouter
	- requirements.txt updated with design choice explanations.
	- Reading fixes: fix to set unlame when child confirms parent glue,
	  and fix to avoid duplicate addresses in delegation point.
	- verify_rrsig routine checks expiration last.

9 December 2009: Wouter
	- Fix Bug#287(reopened): update of ldns tarball with fix for parse
	  errors generated for domain names like '.example.com'.
	- Fix SOA excluded from negative DS responses.  Reported by Hauke
	  Lampe.  The negative cache did not include proper SOA records for
	  negative qtype DS responses which makes BIND barf on it, such