@@ -403,9 +403,9 @@ dns_copy_msg(struct dns_msg* from, struct regional* region)
 
 int 
 iter_dns_store(struct module_env* env, struct query_info* msgqinf,
-	struct reply_info* msgrep, int is_referral)
+	struct reply_info* msgrep, int is_referral, uint32_t leeway)
 {
-	return dns_cache_store(env, msgqinf, msgrep, is_referral);
+	return dns_cache_store(env, msgqinf, msgrep, is_referral, leeway);
 }
 
 int 
