@@ -301,6 +301,8 @@ struct module_qstate {
 	struct regional* region;
 	/** failure reason information if val-log-level is high */
 	struct config_strlist* errinf;
+	/** how many seconds before expiry is this prefetched (0 if not) */
+	uint32_t prefetch_leeway;
 
 	/** which module is executing */
 	int curmod;
